manifests/kuber-deployment.yaml
apiVersion: serving.knative.dev/v1
kind: Service

metadata:
  name: kuber-service
  namespace: default

spec:
  traffic:
  - revisionName: new
    tag: green
    percent: 0
  - revisionName: old
    tag: blue
    percent: 100
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/target: "2"
        autoscaling.knative.dev/min-scale: "1"
        autoscaling.knative.dev/class: "kpa.autoscaling.knative.dev"
    spec:
      containers:
        - name: kuber
          image: ekke020/kuber:latest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 7878
              name: http1
              protocol: TCP
          # Restarts the pod if it can't be reached 3 times in 30 sec
          livenessProbe:
            httpGet:
              path: /healthy
              port: 7878
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          # This checks if the pod is ready to recive traffic 
          readinessProbe:
            httpGet:
              path: /ready
              port: 7878
            periodSeconds: 2
            initialDelaySeconds: 0
            failureThreshold: 3
            successThreshold: 1
      imagePullSecrets:
        - name: regcred
