manifests/kuber-service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: kuber-service
    app: kuber-service
  name: kuber-service
  namespace: default

spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 7878
  selector:
    service: kuber-service
  type: ClusterIp
  traffic:
  - revisionName: new
    tag: green
    percent: 0
  - revisionName: old
    tag: blue
    percent: 100
